src/objects/cb5__CBNonFinancialItem__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBBudgetYearSet__c</fullName>
        <formula>cb5__CBPeriod__r.cb5__CBBudgetYearSet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <formula>cb5__CBPeriod__r.cb5__CBBudgetYear__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBPeriod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>cb5__CBPeriod__c</referenceTo>
        <relationshipLabel>CB Non-Financial Items</relationshipLabel>
        <relationshipName>NonFinancialItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__NonFinancialLibrary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Non-Financial Library</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipName>NonFinancialItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__PeriodName__c</fullName>
        <formula>cb5__CBPeriod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>CB Non-Financial Item</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__NonFinancialLibrary__c</columns>
        <columns>cb5__PeriodName__c</columns>
        <columns>cb5__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cb5__NonFinancialLibrary__c</field>
            <operation>equals</operation>
            <value>Gold Fisher Implementation</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NFI-{000000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Non-Financial Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>